<resources>
    <string name="app_name">MovieRater</string>
    <string name="movieName">Name</string>
    <string name="movieName2">Title:</string>
    <string name="movieNameHint">Enter the title of movie</string>
    <string name="movieDesc">Description</string>
    <string name="movieDesc2">Overview:</string>
    <string name="movieDescHint">Enter a short description of movie</string>
    <string name="movieLanguage">Language</string>
    <string name="movieLanguage2">Language:</string>
    <string name="languageEnglish">English</string>
    <string name="languageChinese">Chinese</string>
    <string name="languageMalay">Malay</string>
    <string name="languageTamil">Tamil</string>
    <string name="releaseDate">Release date</string>
    <string name="releaseDate2">Release date:</string>
    <string name="releaseDateHint">Enter release date here</string>
    <string name="notSuitable">Not suitable for all audience</string>
    <string name="notSuitable2">Suitable for children below 13:</string>
    <string name="violence">Violence</string>
    <string name="languageUsed">Language used</string>
    <string name="addBtn">ADD</string>
    <string name="clear">Clear Entries</string>
    <string name="reason">Reason</string>
    <string name="movieImg">Movie image</string>
    <string name="starImg">star</string>
    <string name="rateMovieHint">Share your view on the show</string>
    <string name="reviews">Reviews:</string>
    <string name="reviewsDefault">No Reviews yet.\nLong press here to add your review</string>
    <string name="submit">SUBMIT</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
</resources>
