<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddMovie">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieName"/>
    <EditText
            android:inputType="text"
            android:id="@+id/movieName"
            android:hint="@string/movieNameHint"
            android:autofillHints="@string/movieNameHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieDesc"/>
    <EditText
            android:inputType="text|textMultiLine"
            android:id="@+id/movieDesc"
            android:hint="@string/movieDescHint"
            android:autofillHints="@string/movieDescHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieLanguage"/>
    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
                android:id="@+id/languageEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languageEnglish"
        />
        <RadioButton
                android:id="@+id/languageChinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languageChinese"
        />
        <RadioButton
                android:id="@+id/languageMalay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languageMalay"
        />
        <RadioButton
                android:id="@+id/languageTamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languageTamil"
        />
    </RadioGroup>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/releaseDate"/>
    <EditText
            android:inputType="date"
            android:id="@+id/releaseDate"
            android:hint="@string/releaseDateHint"
            android:autofillHints="@string/releaseDateHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <CheckBox
            android:id="@+id/notSuitable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notSuitable"
            android:onClick="checkSuitable"
    />
    <LinearLayout
            android:id="@+id/notSuitableGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:weightSum="1">
        <CheckBox
                android:id="@+id/violence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/violence"
                android:layout_weight="0.5"
        />
        <CheckBox
                android:id="@+id/languageUsed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/languageUsed"
                android:layout_weight="0.5"
        />
    </LinearLayout>
</LinearLayout>