<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MovieDetails"
        android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/movieImage"
                android:contentDescription="@string/movieImg"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitCenter"
                android:src="@drawable/movie_icon"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieName2"
            />
    <TextView
            android:id="@+id/movieNameDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"/>
    <TextView
            android:id="@+id/movieDescDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieLanguage"/>
    <TextView
            android:id="@+id/movieLanguageDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/releaseDate"/>
    <TextView
            android:id="@+id/releaseDateDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notSuitable2"/>
    <TextView
            android:id="@+id/notSuitableDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
    />
    <TextView
            android:id="@+id/reasonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason"/>
    <TextView
            android:id="@+id/reasonDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
    />

</LinearLayout>